--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,24 @@
-# This is a basic workflow to help you get started with Actions
+name: CI-BOB-Unittest
 
-name: CI-BOB
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    steps:    
+      # 우리 코드 체크아웃(가상 머신에 우리 코드 다운로드 (git clone))
+      # 여기서 use는 import와 비슷한 개념이다.
+      # github에 actions라는 endpoint 가보면 이것저것 많이 있음
+      - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # 우리 코드를 돌릴 것임
+      - name: Run pwd
+        run: pwd
+      - name: Check directory
+        run: ls -al
+
+      # 우분투 위에 패키지 설치 
+      # 파이썬 유닛 테스트를 돌릴 거임
