check on multiple verion of python

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      python-version: [3.6, 3.7, 3.8, 3.9]
+      python-version = [3.6, 3.7, 3.8, 3.9]
 
     steps:    
       # 우리 코드 체크아웃(가상 머신에 우리 코드 다운로드 (git clone))
